# hazelnut

./: .gitignore  Makefile.am  README  README.md  configure.ac
data/icons/16x16/status/: battery-caution-charging.xpm  battery-caution.xpm  battery-empty.xpm  battery-full-charging.xpm  battery-full.xpm  battery-good-charging.xpm  battery-good.xpm  battery-low-charging.xpm  battery-low.xpm  battery-missing.xpm
data/icons/32x32/actions/: refresh.xpm
data/icons/32x32/apps/: nut.xpm
src/: Makefile.am  app.cpp  app.hpp  colored-gauge.cpp  colored-gauge.hpp  config-dialog.cpp  config-dialog.hpp  device.cpp  device.hpp  task-bar-icon.cpp  task-bar-icon.hpp
src/pixmaps/: alarm-green.xpm  alarm-red.xpm  alarm-yellow.xpm  bar.xpm  bar_bkgnd.xpm  bat_fault22.xpm  bat_fault32.xpm  com_fault22.xpm  com_fault32.xpm  exit16.xpm  menu_help-16.xpm  menu_help.xpm  menu_history.xpm  menu_settings.xpm  menu_settings16.xpm  menu_status.xpm  menu_status16.xpm  nut-banner.xpm  on_ac22.xpm  on_ac32.xpm  on_bat22.xpm  on_bat32.xpm  output_off.xpm  output_on.xpm  systray_bat_000.xpm  systray_bat_025.xpm  systray_bat_050.xpm  systray_bat_075.xpm  systray_bat_100.xpm  warning48.xpm
